# ADDMo

./: .dockerignore  .gitignore  .gitlab-ci.yml  Dockerfile  LICENSE  README.md  app.py  app2.py  app_clean.py  debug.py  environment.yml  index.html  launch_GUI.py  linear.joblib  linear.joblib.json  linear.onnx  mlp.joblib  mlp.onnx  model  model.joblib  model.joblib.json  pyproject.toml  requirements.txt  setup.py  test_script.py  utils.yml
0000_testfiles/: BaseKerasModel.keras  BaseKerasModel_metadata.json  Linear.joblib  LinearReg.joblib  LinearReg_metadata.json  Linear_metadata.json  MLP.onnx  MLP_metadata.json  SciKerasSequential.h5  SciKerasSequential_metadata.json  ScikitMLP.onnx  ScikitMLP_metadata.json  config.json  kera1.keras  kera1_metadata.json  reg.keras  test.py
01_Readme/: HowToUseIt.txt  MainConcept_Final.vsdx  OverviewProgram.txt  ProgramFlowchart.vsdx  Readme.txt
02_Tool/: AutoFinalBayes.py  BlackBoxes.py  BlackBoxes_mkm.py  DataTuning.py  DataTuningRuntimeResults.py  DataTuningSetup.py  Documentation.py  FeatureConstruction.py  FeatureSelection.py  GUI_Remi.py  ImportData.py  LogResults.py  ModelTuning.py  ModelTuningRuntimeResults.py  ModelTuningSetup.py  OnlyPredict.py  PeriodSelection.py  PredictorDefinitions.py  Preprocessing.py  RunADDMo.py  SharedVariables.py  SharedVariablesFunctions.py  _10_Opt_ML.py  _20_ModelSensitivity.py  test.py
03_TrialInput/: InputData.xlsx
04_Results/: Results_Zusammenfassung FUBIC.xlsx  Results_Zusammenfassung_FUBIC.xlsx  Results_Zusammenfassung_FUBIC_neu.xlsx  Results_Zusammenfassung_RWTH.xlsx
GUI/: app.py  (+2 more)
(+4942 files in other folders)
