[project]
name = 'addmo-automated-ml-regression'
version = '0.1.0'
description= 'Automated machine learning tool for regression tasks'
readme = 'README.md'
requires-python = '>=3.10'
dependencies = [ "pandas",
    "wandb",
    "onnxruntime",
    "pydantic",
    "joblib",
    "scikit-learn==1.5.2",
    "scikeras==0.13",
    "keras==3.3.3",
    "tensorflow==2.17.1",
    "skl2onnx",
    "optuna",
    "matplotlib",
    "hyperopt",
    "seaborn",
    "plotly",
    "tf2onnx",
    "pyod",
    "openpyxl",
    "streamlit",
    "streamlit_pdf_viewer",
    "streamlit-pydantic @ git+https://github.com/RWTH-EBC/streamlit-pydantic.git@main"
    ]

[build-system]
requires = ['setuptools>=75.8.0']
build-backend = 'setuptools.build_meta'

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]
exclude = ["tests*"]

[project.scripts]
addmo-gui = "GUI.launch_GUI:launch_streamlit"